# pn532_linux

./: .gitignore  main.cpp  meson.build
lib/: Pn532.cpp  Pn532.h
src/: board_spi.cpp  board_spi.h  main.cpp  main.h
ws_code/examples/raspberrypi/: rpi_dump_mifare.c
